// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpensesSummary corectly with 1 expense 1`] = `
<div>
  <h3>
    Viewing 
    1
     
    expense
     totalling 
    $0.55
  </h3>
</div>
`;

exports[`should render ExpensesSummary corectly with multiple expenses 1`] = `
<div>
  <h3>
    Viewing 
    24
     
    expenses
     totalling 
    $0.55
  </h3>
</div>
`;
